--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -18,7 +18,7 @@
 }
 
 #landing-background-image {
-  background-image: url("https://picsum.photos/400/200");
+  background-image: url("../content/cd_graphics_logo.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -26,7 +26,7 @@
   width: 100%;
   position: absolute;
   z-index: 0;
-  opacity: 0.6;
+  opacity: 0.1;
 }
 
 #landing-heading, #landing-subheading {
@@ -44,8 +44,18 @@
   width: 6%;
 }
 
+#landing-heading {
+  font-size: 6rem;
+  letter-spacing: 0.5rem;
+  white-space: nowrap;
+}
+
 #landing-subheading {
-  margin: 20px 0 60px;
+  margin: 30px 0 60px;
+  font-size: 1.4rem;
+  letter-spacing: 0.12rem;
+  font-weight: 500;
+  white-space: nowrap;
 }
 
 #landing-arrow-container:hover {
