--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,6 +16,14 @@
   margin: 0 30px;
 }
 
+.nav-logo {
+  max-width: 180px;
+}
+
+.nav-logo > img {
+  width: 100%;
+}
+
 .nav-text {
   text-transform: uppercase;
   text-decoration: none;
