--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -20,7 +20,7 @@
 #landing-background-image {
   background-image: url("../content/cd_graphics_logo.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   height: 100%;
   width: 100%;
