--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -31,6 +31,7 @@
 
 #landing-heading, #landing-subheading {
   text-transform: uppercase;
+  text-align: center;
 }
 
 #landing-heading, #landing-break {
@@ -39,16 +40,15 @@
 
 #landing-break {
   position: absolute;
-  bottom: 40px;
+  bottom: 2vh;
   border-bottom: 1px solid rgb(0, 33, 43);;
   width: 6%;
 }
 
-#landing-heading {
+/* #landing-heading {
   font-size: 6rem;
   letter-spacing: 0.5rem;
-  white-space: nowrap;
-}
+} */
 
 #landing-subheading {
   margin: 30px 0 60px;
@@ -58,9 +58,17 @@
   white-space: nowrap;
 }
 
+#landing-arrow {
+  width: 50px;
+  height: 20vh;
+}
+
 #landing-arrow-container:hover {
   animation: bounce 2s ease-in-out infinite;
 }
+
+/* @media screen and (max-width: 600px) {
+} */
 
 @keyframes bounce {
   0% {
