--- a/css/navbar.css
+++ b/css/navbar.css
@@ -18,6 +18,7 @@
 
 .nav-logo {
   max-width: 180px;
+  min-width: 90px;
 }
 
 .nav-logo > img {
@@ -45,4 +46,16 @@
 
 .nav-text:hover:after {
   opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+  #navbar > div {
+    text-align: right;
+  }
+
+  #navbar .nav-text:after,
+  #navbar .nav-text:hover:after,
+  #navbar .nav-text:active:after {
+    border-bottom: none;
+  }
 }
