contact page plus ammendments

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -18,7 +18,7 @@
 }
 
 #landing-background-image {
-  background-image: url("../content/cd_graphics_logo.jpg");
+  background-image: url("../content/cd_graphics_logo.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -59,12 +59,24 @@
 }
 
 #landing-arrow {
-  width: 50px;
-  height: 20vh;
+  width: 37px;
+  height: 100px;
 }
 
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 1470px) {
+  #landing-heading {
+    font-size: 7vw;
+  }
+}
+
+@media screen and (min-width: 1471px) {
+  #landing-heading {
+    font-size: 6.5rem;
+  }
+}
+
+@media screen and (min-width: 640px) {
   #landing-arrow-container:hover {
     animation: bounce 2s ease-in-out infinite;
   }
