--- a/css/setup.css
+++ b/css/setup.css
@@ -11,6 +11,7 @@ body, header, footer {
   height: 100%;
   width: 100%;
   font-family: avenir, sans-serif;
+  background-color: rgb(226, 227, 229);
 }
 
 h1 {
@@ -40,7 +41,7 @@ h6 {
 }
 p, li {
   font-size: 1.5rem;
-  font-size: calc(1.5rem + 0.2vw);
+  font-size: calc(1rem + 0.2vw);
   font-weight: 400;
   line-height: 1.5;
 }
@@ -58,7 +59,11 @@ a:visited {
   margin-top: -16vh;
   padding: 16vh 4vw 0;
 }
-            
+
+.page:not(:last-child) {
+  margin-bottom: 20vh;
+}
+
 .page-heading {
   text-align: center;
   display: flex;
@@ -66,8 +71,8 @@ a:visited {
   align-items: center;
   margin: 50px 0;
   text-transform: uppercase;
-  font-size: 2.4rem;
-  letter-spacing: 0.08rem;
+  /* font-size: 2.4rem;
+  letter-spacing: 0.08rem; */
   font-weight: 900;
 }
 
