--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,13 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(226, 227, 229);
+  background-color: rgb(15, 37, 49);
   /* border-bottom: 1px solid grey; */
   width: 100%;
   height: 16vh;
   position: fixed;
   top: 0;
   z-index: 2;
+  color: white;
   /* padding: 20px 10%; */
 }
 
@@ -38,7 +39,7 @@
   content: '';
   width: 30px;
   height: 1px;
-  border-bottom: 1px solid rgb(0, 33, 43);
+  border-bottom: 1px solid rgb(102, 191, 234);
   padding-bottom: 10px;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
