--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,7 +9,6 @@
   position: fixed;
   top: 0;
   z-index: 2;
-  color: white;
   box-shadow: 0 8px 6px -6px #999;
   /* padding: 20px 10%; */
 }
@@ -35,7 +34,7 @@
   flex-direction: column;
   align-items: center;
 }
-        
+
 .nav-text:after {
   content: '';
   width: 30px;
@@ -48,6 +47,11 @@
 
 .nav-text:hover:after {
   opacity: 1;
+}
+
+#desktop-menu .nav-text,
+#desktop-menu .nav-text:visited {
+  color: white;
 }
 
 #hamburger-icon {
@@ -63,16 +67,20 @@
   right: 0;
   top: 16vh;
   background-color: rgb(102, 191, 234);
-  color: rgb(15, 37, 49);
   text-align: center;
   padding: 1vh;
+}
+
+#hamburger-menu .nav-text,
+#hamburger-menu .nav-text:visited {
+  color: rgb(15, 37, 49);
 }
 
 @media screen and (max-width: 600px) {
   #hamburger-icon {
     display: block;
   }
-
+  
   #desktop-menu {
     display: none;
   }
