fix: updating code and small improvements to site

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,32 +1,39 @@
 #navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: rgb(15, 37, 49);
-  /* border-bottom: 1px solid grey; */
   width: 100%;
-  height: 16vh;
+  height: 100px;
   position: fixed;
   top: 0;
   z-index: 2;
   box-shadow: 0 8px 6px -6px #999;
-  /* padding: 20px 10%; */
 }
 
-.nav-item {
-  margin: 0 30px;
+#navbar-inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  padding: 20px;
 }
 
 .nav-logo {
-  max-width: 180px;
-  min-width: 90px;
+  max-width: 120px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.nav-logo > img {
+.nav-logo img {
   width: 100%;
 }
 
+#desktop-menu {
+  display: flex;
+  gap: 30px;
+}
+
 .nav-text {
+  position: relative;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 900;
@@ -36,7 +43,9 @@
 }
 
 .nav-text:after {
-  content: '';
+  position: absolute;
+  bottom: -6px;
+  content: "";
   width: 30px;
   height: 1px;
   border-bottom: 1px solid rgb(102, 191, 234);
@@ -58,21 +67,24 @@
   display: none;
   color: white;
   margin: 0 30px;
-  font-size: 1.8rem
+  font-size: 1.8rem;
 }
 
-#hamburger-menu {
+#mobile-menu {
   position: absolute;
   left: 0;
   right: 0;
-  top: 16vh;
+  top: 100px;
   background-color: rgb(102, 191, 234);
   text-align: center;
   padding: 1vh;
+  gap: 30px;
+  display: flex;
+  justify-content: center;
 }
 
-#hamburger-menu .nav-text,
-#hamburger-menu .nav-text:visited {
+#mobile-menu .nav-text,
+#mobile-menu .nav-text:visited {
   color: rgb(15, 37, 49);
 }
 
@@ -80,7 +92,7 @@
   #hamburger-icon {
     display: block;
   }
-  
+
   #desktop-menu {
     display: none;
   }
