--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -3,13 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: calc(100vh - 100px);
 }
 
 #landing-heading-container {
   position: relative;
   height: 28vh;
-  width: 80%;
-  max-width: 1000px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,26 +28,31 @@
   opacity: 0.1;
 }
 
-#landing-heading, #landing-subheading {
+#landing-heading,
+#landing-subheading {
   text-transform: uppercase;
   text-align: center;
+  opacity: 0;
 }
 
-#landing-heading, #landing-break {
+#landing-heading {
+  animation: opacity 2s ease-in-out forwards;
+}
+#landing-subheading {
+  animation: opacity 2s 1s ease-in-out forwards;
+}
+
+#landing-heading,
+#landing-break {
   z-index: 1;
 }
 
 #landing-break {
   position: absolute;
   bottom: 2vh;
-  border-bottom: 1px solid rgb(0, 33, 43);;
+  border-bottom: 1px solid rgb(0, 33, 43);
   width: 6%;
 }
-
-/* #landing-heading {
-  font-size: 6rem;
-  letter-spacing: 0.5rem;
-} */
 
 #landing-subheading {
   margin: 30px 0 60px;
@@ -59,14 +64,7 @@
 
 #landing-arrow {
   width: 37px;
-  height: 100px;
-}
-
-
-@media screen and (min-width: 600px) and (max-width: 1470px) {
-  #landing-heading {
-    font-size: 7vw;
-  }
+  height: 80px;
 }
 
 @media screen and (min-width: 1471px) {
@@ -76,8 +74,17 @@
 }
 
 @media screen and (min-width: 640px) {
-  #landing-arrow-container:hover {
-    animation: bounce 2s ease-in-out infinite;
+  #landing-arrow-container {
+    animation: bounce 4s 3s ease-in-out infinite;
+  }
+}
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
 
@@ -85,20 +92,22 @@
   0% {
     transform: translateY(0px);
   }
-  20% {
+  10% {
     transform: translateY(-20px);
   }
-  40% {
+  20% {
     transform: translateY(20px);
   }
-  60% {
+  30% {
     transform: translateY(-10px);
   }
-  80% {
+  40% {
     transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(0px);
   }
   100% {
     transform: translateY(0px);
   }
-  
 }
