--- a/css/setup.css
+++ b/css/setup.css
@@ -1,10 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
 }
 
-body, header, footer {
+body {
   margin: 0px;
   padding: 0px;
   display: block;
@@ -15,8 +19,7 @@ body, header, footer {
 }
 
 h1 {
-  font-size: 3.0rem;
-  font-size: calc(3.0rem + 0.1vw);
+  font-size: 3rem;
   letter-spacing: 1px;
 }
 h2 {
@@ -24,8 +27,8 @@ h2 {
   font-size: calc(2.4rem + 0.1vw);
 }
 h3 {
-  font-size: 2.0rem;
-  font-size: calc(2.0rem + 0.1vw);
+  font-size: 2rem;
+  font-size: calc(2rem + 0.1vw);
 }
 h4 {
   font-size: 1.8rem;
@@ -39,33 +42,33 @@ h6 {
   font-size: 1.2rem;
   font-size: calc(1.2rem + 0.1vw);
 }
-p, li {
+p,
+li {
   font-size: 1.5rem;
   font-size: calc(1rem + 0.2vw);
   font-weight: 400;
   line-height: 1.5;
 }
 small {
-  font-size: calc(1.0rem + 0.1vw);
+  font-size: calc(1rem + 0.1vw);
 }
-/* a:visited {
-  color: unset;
-} */
+
+.hidden {
+  display: none !important;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+}
 
 .page {
-  min-height: calc(100vh - 16vh);
+  min-height: 100vh;
   background-color: rgb(226, 227, 229);
   z-index: 1;
-  margin-top: -16vh;
-  padding: 16vh 4vw 0;
-}
-
-.first-page {
-  padding-top: 32vh;
-}
-
-.page:not(:last-child) {
-  margin-bottom: 5vh;
+  position: relative;
+  top: 100px;
+  padding: 20px;
 }
 
 .page-heading {
@@ -81,7 +84,7 @@ small {
 }
 
 .page-heading:after {
-  content: '';
+  content: "";
   padding-bottom: 20px;
   height: 1px;
   width: 40px;
